# thruststand

install/: local_setup.sh  setup.sh
install/drone_dynamixel_bridge/lib/drone_dynamixel_bridge/: angular_state_logger  drone_dynamixel_bridge  drone_dynamixel_bridge_old  motor_stepdown  motor_stepup
install/drone_dynamixel_bridge/share/ament_index/resource_index/package_run_dependencies/: drone_dynamixel_bridge
install/drone_dynamixel_bridge/share/drone_dynamixel_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_dynamixel_bridge/share/drone_dynamixel_bridge/cmake/: drone_dynamixel_bridgeConfig-version.cmake  drone_dynamixel_bridgeConfig.cmake
install/drone_dynamixel_bridge/share/drone_dynamixel_bridge/environment/: ament_prefix_path.dsv  path.dsv
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/cmake/: dynamixel_sdk_custom_interfaces__rosidl_generator_cExport.cmake  dynamixel_sdk_custom_interfaces__rosidl_typesupport_cExport.cmake  dynamixel_sdk_custom_interfaces__rosidl_typesupport_cppExport.cmake
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: package.sh
install/flightstack/share/flightstack/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/flightstack/share/flightstack/cmake/: flightstackConfig.cmake
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/cmake/: px4_msgsConfig.cmake  px4_msgs__rosidl_generator_cExport.cmake  px4_msgs__rosidl_typesupport_cExport.cmake
install/px4_msgs/share/px4_msgs/msg/: ManualControlSwitches.idl  RoverAckermannGuidanceStatus.idl  RoverAckermannSetpoint.idl  RoverAckermannStatus.idl  RoverMecanumSetpoint.idl  RoverMecanumStatus.idl
log/: latest_build
logs/: log_20250330_210103.csv
src/: ACSL-flightstack
src/comms/: .received_file.txt.swp  .tcp_server.cpp.swp  a.out  gains_pid.json  received_file.txt  run_flightstack.sh  start_uxrce.sh.save  tcp_server  tcp_server.cpp  tcp_server_bash.sh  tcp_server_revised.sh  tcp_server_scp.sh  tcp_server_test
src/drone_dynamixel_bridge/: CMakeLists.txt
src/drone_dynamixel_bridge/src/: angular_state_logger.cpp  drone_dynamixel_bridge.cpp  drone_dynamixel_bridge.cpp.back  drone_dynamixel_bridge.cpp.back3  drone_dynamixel_bridge_copy.cpp  motor_stepdown.cpp  motor_stepup.cpp  old.cpp  performance_index.cpp
(+57 files in other folders)
